# CXL-EBFI

./: LICENSE  NOTICE.txt  README.md  README.txt
gem5-ebfi/: README.md  SUPPLEMENT.md  gem5-version.txt
gem5-ebfi/configs/: ebfi_cxl.py
gem5-ebfi/results/: raw_results.csv  summary.csv  summary.json
gem5-ebfi/results/read-decomposition/: raw_results.csv  summary.csv  summary.json
gem5-ebfi/results/workloads/: raw_results.csv  summary.csv  summary.json
gem5-ebfi/results/write-path/: persistence_requirements.csv  raw_results.csv  (+3 more)
gem5-ebfi/scripts/: analyze_persistence_requirements.py  build_gem5.sh  plot_results.py  plot_workloads.py  run_matrix.py  run_quick.sh  run_read_decomposition.py  run_read_decomposition.sh  run_sensitivity.sh  run_workload_matrix.sh  run_write_model.py  run_write_model.sh
gem5-ebfi/src/: EbfiController.py  SConscript  ebfi_controller.cc  ebfi_controller.hh
rtl/: README.md  ebfi_metadata_ctrl.sv  run.sh  synth.ys  tb_ebfi_metadata_ctrl.sv
rtl/results/: synthesis_summary.json
sim/: Cargo.toml  cxl_ebfi_protocol.py  cxl_ebfi_ref.py  protocol_races_summary.json  protocol_summary.json  test_vectors.json
sim/src/: main.rs
tla/: CXL_EBFI_CrashRecovery.cfg  CXL_EBFI_CrashRecovery.tla  CXL_EBFI_CrashRecovery_EarlyPublish.cfg  CXL_EBFI_CrashRecovery_WeakCounter.cfg  CXL_EBFI_Invariant.cfg  CXL_EBFI_Invariant.tla  CXL_EBFI_Protocol.cfg  CXL_EBFI_Protocol.tla  CXL_EBFI_Protocol_3W.cfg  CXL_EBFI_Protocol_NonAtomic.cfg  CXL_EBFI_Protocol_WeakTicket.cfg  TLC_CRASH_RUN.txt  TLC_PROTOCOL_3W_RUN.txt  TLC_PROTOCOL_RUN.txt  TLC_RUN.txt
