[package]
name = "cxl_ebfi_sim"
version = "0.1.0"
edition = "2021"
authors = ["Michel Picker"]
description = "Rust reference simulator for CXL-EBFI: ticketed epoch-bound freshness and scoped working-key post-compromise integrity for CXL.mem. It uses AES-256-GCM, HKDF-SHA-256 epoch keys, reference-counted key erasure, a full-width line-ID nonce prefix, and a deterministic labeled attacker. Mirrors sim/cxl_ebfi_ref.py and consumes the same cryptographic known-answer vector."
license = "MIT"
repository = "https://github.com/..."  # update on publish

[dependencies]
# Small, pure-Rust crypto for authenticated encryption of 64B lines
aes-gcm = { version = "0.10", features = ["std"] }
# HKDF-SHA-256 (RFC 5869) for independent epoch-key derivation
hkdf = "0.12"
sha2 = "0.10"
# Random + distributions for workloads and Gilbert-Elliott model
rand = { version = "0.8", features = ["std", "std_rng"] }
# CLI
clap = { version = "4.5", features = ["derive"] }
# CSV + serde for metrics output (plots)
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 2
lto = "thin"
